--- a/beta/index.html
+++ b/beta/index.html
@@ -159,10 +159,12 @@
       <a href="/privacy.html">개인정보 취급방침</a>
     </div>
     <div class="beta-footer__bottom">
-      <div class="beta-footer__brand">
-        <span class="beta-footer__logo-mark">%</span>
-        <span class="beta-footer__logo-text">HUCHU</span>
-      </div>
+     <div class="beta-footer__brand">
+  <img src="/assets/logo/huchu-logo-white.png"
+       alt="HUCHU 로고"
+       class="beta-footer__logo-img" />
+  <span class="beta-footer__logo-text">HUCHU</span>
+</div>
       <div class="beta-footer__info">
         <p>상호: (예시) 후추랩 | 대표: 장현성</p>
         <p>주소: (예시) 경기도 고양시 일산동구 00로 00</p>
