--- a/beta/admin-beta.html
+++ b/beta/admin-beta.html
@@ -471,10 +471,10 @@
             </table>
 
             <div class="admin-actions-row" style="margin-top:12px;">
-              <button id="saveOntuStatsBtn" type="button" class="admin-btn admin-btn-primary">
+             <button type="button" id="loanConfigSaveBtn" class="admin-primary-btn">
                 통계 데이터 저장
               </button>
-              <span id="statsSaveStatus" class="admin-status-text"></span>
+              <span id="loanConfigStatus" style="font-size:12px;color:#6b7280;"></span>
             </div>
           </div>
 
