--- a/beta/admin-beta.html
+++ b/beta/admin-beta.html
@@ -89,23 +89,23 @@
             계산기 1번 <strong>지역 선택(서울, 경기, 인천, 충청도, 전라도, 강원도, 경상도, 제주도)</strong>와 동일한 지역별 설정입니다.
           </p>
 
-<!-- 지역 선택 -->
-<div style="margin-top:12px;">
-  <label style="font-size:13px;color:#374151;margin-bottom:6px;">지역 선택</label>
-  <div id="loanRegionTabs" class="admin-region-list">
-    <button type="button" class="admin-region-btn is-active" data-region="서울">서울</button>
-    <button type="button" class="admin-region-btn" data-region="경기">경기</button>
-    <button type="button" class="admin-region-btn" data-region="인천">인천</button>
-    <button type="button" class="admin-region-btn" data-region="충청도">충청도</button>
-    <button type="button" class="admin-region-btn" data-region="전라도">전라도</button>
-    <button type="button" class="admin-region-btn" data-region="강원도">강원도</button>
-    <button type="button" class="admin-region-btn" data-region="경상도">경상도</button>
-    <button type="button" class="admin-region-btn" data-region="제주도">제주도</button>
-  </div>
-  <p style="margin:4px 0 0;font-size:11px;color:#9ca3af;">
-    선택한 지역 기준으로 아래 LTV/금리 값을 입력합니다. 다른 지역을 누르면 해당 지역에 저장된 값이 다시 표시됩니다.
-  </p>
-</div>
+          <!-- 지역 선택 -->
+          <div style="margin-top:12px;">
+            <label style="font-size:13px;color:#374151;margin-bottom:6px;">지역 선택</label>
+            <div id="loanRegionTabs" class="admin-region-list">
+              <button type="button" class="admin-region-btn is-active" data-region="서울">서울</button>
+              <button type="button" class="admin-region-btn" data-region="경기">경기</button>
+              <button type="button" class="admin-region-btn" data-region="인천">인천</button>
+              <button type="button" class="admin-region-btn" data-region="충청도">충청도</button>
+              <button type="button" class="admin-region-btn" data-region="전라도">전라도</button>
+              <button type="button" class="admin-region-btn" data-region="강원도">강원도</button>
+              <button type="button" class="admin-region-btn" data-region="경상도">경상도</button>
+              <button type="button" class="admin-region-btn" data-region="제주도">제주도</button>
+            </div>
+            <p style="margin:4px 0 0;font-size:11px;color:#9ca3af;">
+              선택한 지역 기준으로 아래 LTV/금리 값을 입력합니다. 다른 지역을 누르면 해당 지역에 저장된 값이 다시 표시됩니다.
+            </p>
+          </div>
 
           <!-- 물건 종류별 LTV/금리 -->
           <div class="admin-card">
@@ -238,11 +238,10 @@
           </div>
 
           <div class="admin-actions-row">
-          <button type="button" id="loanConfigSaveBtn" class="admin-primary-btn">
-           LTV / 금리 설정 저장
-          </button>
-          <span id="loanConfigStatus" style="font-size:12px;color:#6b7280;"></span>
-
+            <button type="button" id="loanConfigSaveBtn" class="admin-primary-btn">
+              LTV / 금리 설정 저장
+            </button>
+            <span id="loanConfigStatus" style="font-size:12px;color:#6b7280;"></span>
           </div>
         </div>
       </section>
@@ -471,10 +470,10 @@
             </table>
 
             <div class="admin-actions-row" style="margin-top:12px;">
-             <button type="button" id="loanConfigSaveBtn" class="admin-primary-btn">
+              <button type="button" id="saveOntuStatsBtn" class="admin-primary-btn">
                 통계 데이터 저장
               </button>
-              <span id="loanConfigStatus" style="font-size:12px;color:#6b7280;"></span>
+              <span id="statsSaveStatus" style="font-size:12px;color:#6b7280;"></span>
             </div>
           </div>
 
@@ -492,11 +491,11 @@
     </div>
     <div class="beta-footer__bottom">
       <div class="beta-footer__brand">
-  <img src="/assets/logo/huchu-logo-white.png"
-       alt="HUCHU 로고"
-       class="beta-footer__logo-img" />
-  <span class="beta-footer__logo-text">HUCHU</span>
-</div>
+        <img src="/assets/logo/huchu-logo-white.png"
+             alt="HUCHU 로고"
+             class="beta-footer__logo-img" />
+        <span class="beta-footer__logo-text">HUCHU</span>
+      </div>
       <div class="beta-footer__info">
         <p>상호: (예시) 후추랩 | 대표: 장현성</p>
         <p>주소: (예시) 경기도 고양시 일산동구 00로 00</p>
