--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -64,39 +64,36 @@
     <section class="products-section">
       <h2 class="products-section__title">부동산 유형별 온투업 대출상품</h2>
 
-      <div class="products-grid">
-        <!-- 카드 1: 아파트 -->
-        <article class="product-card">
-          <h3 class="product-card__title">
-            아파트담보대출 · 아파트지분대출
-          </h3>
-          <p class="product-card__desc">
-            실거주 아파트, 투자용 아파트를 담보로
-            <strong>아파트담보대출, 아파트지분대출, 아파트주담대</strong>를
-            통해 추가 한도를 확보하는 구조를 정리합니다.
-            은행 <strong>주택담보대출규제</strong>와 <strong>DSR</strong> 한도에 막힌 경우,
-            온투업(P2P) 구조로 <strong>후순위주담대</strong>를 활용해
-            추가한도·대환을 검토할 수 있습니다.
-          </p>
-          <ul class="product-card__bullets">
-            <li>아파트대출한도 · 아파트대출금리 개념 정리</li>
-            <li>후순위주담대한도, 후순위주담대금리, 후순위담보대출 구조</li>
-            <li>중도상환수수료, 담보대출이자, DSR·DSR미적용 체크포인트</li>
-          </ul>
-          <div class="product-card__tags">
-            <span>#아파트대출</span>
-            <span>#아파트담보대출</span>
-            <span>#아파트지분대출</span>
-            <span>#아파트주담대</span>
-            <span>#아파트대출금리</span>
-            <span>#아파트대출한도</span>
-            <span>#후순위주담대</span>
-            <span>#후순위담보대출</span>
-          </div>
-          <a href="/beta/products/apartment.html" class="product-card__link">
-            아파트담보대출 상품 (베타) 자세히 보기
-          </a>
-        </article>
+     <section class="product-hub">
+  <!-- 아파트담보대출 카드 -->
+  <article class="product-card">
+    <h2 class="product-card__title">아파트담보대출</h2>
+    <p class="product-card__desc">
+      아파트를 담보로 한 일반담보대출, 지분대출, 경락잔금대출, 
+      임대보증금반환대출, 대부업대환대출 상품 정보를 비교할 수 있습니다.
+    </p>
+
+    <div class="product-card__buttons">
+      <a href="/beta/products/apartment/standard.html" class="product-btn">
+        일반담보대출 상세보기
+      </a>
+      <a href="/beta/products/apartment/share.html" class="product-btn">
+        지분담보대출 상세보기
+      </a>
+      <a href="/beta/products/apartment/auction-bridge.html" class="product-btn">
+        경락잔금대출 상세보기
+      </a>
+      <a href="/beta/products/apartment/deposit-return.html" class="product-btn">
+        임대보증금반환대출 상세보기
+      </a>
+      <a href="/beta/products/apartment/highrate-refi.html" class="product-btn">
+        대부업대환대출 상세보기
+      </a>
+    </div>
+  </article>
+
+  <!-- 밑에 빌라·연립 / 단독·다가구 / 근생·업무시설 / 토지·임야 카드 4개 더 배치 -->
+</section>
 
         <!-- 카드 2: 빌라/연립 -->
         <article class="product-card">
