--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -65,32 +65,49 @@
       <h2 class="products-section__title">부동산 유형별 온투업 대출상품</h2>
 
      <section class="product-hub">
-  <!-- 아파트담보대출 카드 -->
-  <article class="product-card">
-    <h2 class="product-card__title">아파트담보대출</h2>
-    <p class="product-card__desc">
-      아파트를 담보로 한 일반담보대출, 지분대출, 경락잔금대출, 
-      임대보증금반환대출, 대부업대환대출 상품 정보를 비교할 수 있습니다.
-    </p>
+ <article class="product-card">
+  <h2 class="product-card__title">아파트담보대출</h2>
+  <p class="product-card__desc">
+    아파트를 담보로 한 일반담보대출, 지분담보대출, 경락잔금대출,
+    임대보증금반환대출, 대부업대환대출 상품 정보를 비교할 수 있습니다.
+  </p>
 
-    <div class="product-card__buttons">
-      <a href="/beta/products/apartment/standard.html" class="product-btn">
-        일반담보대출 상세보기
-      </a>
-      <a href="/beta/products/apartment/share.html" class="product-btn">
-        지분담보대출 상세보기
-      </a>
-      <a href="/beta/products/apartment/auction-bridge.html" class="product-btn">
-        경락잔금대출 상세보기
-      </a>
-      <a href="/beta/products/apartment/deposit-return.html" class="product-btn">
-        임대보증금반환대출 상세보기
-      </a>
-      <a href="/beta/products/apartment/highrate-refi.html" class="product-btn">
-        대부업대환대출 상세보기
-      </a>
-    </div>
-  </article>
+  <!-- 해시태그 영역 -->
+  <div class="product-card__tags">
+    <span class="product-tag">#아파트대출</span>
+    <span class="product-tag">#아파트담보대출</span>
+    <span class="product-tag">#아파트지분대출</span>
+    <span class="product-tag">#아파트주담대</span>
+    <span class="product-tag">#아파트대출금리</span>
+    <span class="product-tag">#아파트대출한도</span>
+    <span class="product-tag">#후순위주담대</span>
+    <span class="product-tag">#후순위담보대출</span>
+    <span class="product-tag">#경락잔금대출</span>
+    <span class="product-tag">#경락잔금대출한도</span>
+    <span class="product-tag">#경락잔금대출금리</span>
+    <span class="product-tag">#P2P주담대</span>
+    <span class="product-tag">#온투업대출</span>
+  </div>
+
+  <!-- 버튼들 -->
+  <div class="product-card__buttons">
+    <a href="/beta/products/apartment/standard.html" class="product-btn">
+      일반담보대출 상세보기
+    </a>
+    <a href="/beta/products/apartment/share.html" class="product-btn">
+      지분담보대출 상세보기
+    </a>
+    <a href="/beta/products/apartment/auction-bridge.html" class="product-btn">
+      경락잔금대출 상세보기
+    </a>
+    <a href="/beta/products/apartment/deposit-return.html" class="product-btn">
+      임대보증금반환대출 상세보기
+    </a>
+    <a href="/beta/products/apartment/highrate-refi.html" class="product-btn">
+      대부업대환대출 상세보기
+    </a>
+  </div>
+</article>
 
   <!-- 밑에 빌라·연립 / 단독·다가구 / 근생·업무시설 / 토지·임야 카드 4개 더 배치 -->
 </section>
