--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="beta-body">
 
-  <!-- 상단 헤더: 베타와 동일 구조 (메뉴에 굳이 이 페이지를 안 넣어도 됨) -->
+  <!-- 상단 헤더: 베타와 동일 구조 -->
   <header class="huchu-header beta-header" role="banner">
     <div class="huchu-header__inner beta-header__inner">
       <a href="/" class="huchu-logo" aria-label="후추 Huchu 홈">
@@ -64,54 +64,53 @@
     <section class="products-section">
       <h2 class="products-section__title">부동산 유형별 온투업 대출상품</h2>
 
-     <section class="product-hub">
- <article class="product-card">
-  <h2 class="product-card__title">아파트담보대출</h2>
-  <p class="product-card__desc">
-    아파트를 담보로 한 일반담보대출, 지분담보대출, 경락잔금대출,
-    임대보증금반환대출, 대부업대환대출 상품 정보를 비교할 수 있습니다.
-  </p>
+      <!-- 여기서부터 6개 카드 모두 product-hub 안에 묶음 -->
+      <div class="product-hub">
 
-  <!-- 해시태그 영역 -->
-  <div class="product-card__tags">
-    <span class="product-tag">#아파트대출</span>
-    <span class="product-tag">#아파트담보대출</span>
-    <span class="product-tag">#아파트지분대출</span>
-    <span class="product-tag">#아파트주담대</span>
-    <span class="product-tag">#아파트대출금리</span>
-    <span class="product-tag">#아파트대출한도</span>
-    <span class="product-tag">#후순위주담대</span>
-    <span class="product-tag">#후순위담보대출</span>
-    <span class="product-tag">#경락잔금대출</span>
-    <span class="product-tag">#경락잔금대출한도</span>
-    <span class="product-tag">#경락잔금대출금리</span>
-    <span class="product-tag">#P2P주담대</span>
-    <span class="product-tag">#온투업대출</span>
-  </div>
+        <!-- 카드 1: 아파트 -->
+        <article class="product-card">
+          <h2 class="product-card__title">아파트담보대출</h2>
+          <p class="product-card__desc">
+            아파트를 담보로 한 일반담보대출, 지분담보대출, 경락잔금대출,
+            임대보증금반환대출, 대부업대환대출 상품 정보를 비교할 수 있습니다.
+          </p>
 
-  <!-- 버튼들 -->
-<div class="product-card__buttons">
-  <a href="/beta/products/apt-general.html" class="product-btn">
-    일반담보대출 상세보기
-  </a>
-  <a href="/beta/products/apt-share.html" class="product-btn">
-    지분담보대출 상세보기
-  </a>
-  <a href="/beta/products/apt-auction.html" class="product-btn">
-    경락잔금대출 상세보기
-  </a>
-  <a href="/beta/products/apt-deposit-return.html" class="product-btn">
-    임대보증금반환대출 상세보기
-  </a>
-  <a href="/beta/products/apt-highrate-refi.html" class="product-btn">
-    대부업대환대출 상세보기
-  </a>
-</div>
+          <!-- 해시태그 영역 -->
+          <div class="product-card__tags">
+            <span class="product-tag">#아파트대출</span>
+            <span class="product-tag">#아파트담보대출</span>
+            <span class="product-tag">#아파트지분대출</span>
+            <span class="product-tag">#아파트주담대</span>
+            <span class="product-tag">#아파트대출금리</span>
+            <span class="product-tag">#아파트대출한도</span>
+            <span class="product-tag">#후순위주담대</span>
+            <span class="product-tag">#후순위담보대출</span>
+            <span class="product-tag">#경락잔금대출</span>
+            <span class="product-tag">#경락잔금대출한도</span>
+            <span class="product-tag">#경락잔금대출금리</span>
+            <span class="product-tag">#P2P주담대</span>
+            <span class="product-tag">#온투업대출</span>
+          </div>
 
-</article>
-
-  <!-- 밑에 빌라·연립 / 단독·다가구 / 근생·업무시설 / 토지·임야 카드 4개 더 배치 -->
-</section>
+          <!-- 상세 버튼들 -->
+          <div class="product-card__buttons">
+            <a href="/beta/products/apt-general.html" class="product-btn">
+              일반담보대출 상세보기
+            </a>
+            <a href="/beta/products/apt-share.html" class="product-btn">
+              지분담보대출 상세보기
+            </a>
+            <a href="/beta/products/apt-auction.html" class="product-btn">
+              경락잔금대출 상세보기
+            </a>
+            <a href="/beta/products/apt-deposit-return.html" class="product-btn">
+              임대보증금반환대출 상세보기
+            </a>
+            <a href="/beta/products/apt-highrate-refi.html" class="product-btn">
+              대부업대환대출 상세보기
+            </a>
+          </div>
+        </article>
 
         <!-- 카드 2: 빌라/연립 -->
         <article class="product-card">
@@ -266,7 +265,8 @@
             후순위·경락·대환 상품 (베타) 자세히 보기
           </a>
         </article>
-      </div>
+
+      </div> <!-- /.product-hub -->
     </section>
 
     <!-- 하단 안내 카드 -->
